<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ColorPickerActivity">

    <LinearLayout
        style="@style/page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header_text"
            style="@style/header.rainbows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_text_picker"/>

        <Button
            android:id="@+id/red_button"
            style="@style/button"
            app:backgroundTint="@null"
            android:background="@color/red"
            android:text="@string/red"/>

        <Button
            android:id="@+id/orange_button"
            style="@style/button"
            app:backgroundTint="@null"
            android:background="@color/orange"
            android:text="@string/orange"/>

        <Button
            android:id="@+id/yellow_button"
            style="@style/button"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@color/yellow"
            android:text="@string/yellow"/>

        <Button
            android:id="@+id/green_button"
            style="@style/button"
            android:textColor="@color/violet"
            app:backgroundTint="@null"
            android:background="@color/green"
            android:text="@string/green" />

        <Button
            android:id="@+id/blue_button"
            style="@style/button"
            app:backgroundTint="@null"
            android:background="@color/blue"
            android:text="@string/blue"/>

        <Button
            android:id="@+id/indigo_button"
            style="@style/button"
            app:backgroundTint="@null"
            android:background="@color/indigo"
            android:text="@string/indigo" />

        <Button
            android:id="@+id/violet_button"
            style="@style/button"
            app:backgroundTint="@null"
            android:background="@color/violet"
            android:text="@string/violet" />

        <TextView
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footer_text_picker"/>
    </LinearLayout>
</ScrollView>